--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "version 1 of sport direct api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
