--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "version 1 of sport direct api",
   "main": "app.js",
   "scripts": {
+    "test": "mocha 'test/**/*.js' --recursive --timeout 6000 --exit",
     "start": "nodemon app"
   },
   "author": "",
@@ -18,6 +19,9 @@
     "sequelize": "^6.27.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.20",
+    "sinon": "^15.0.1"
   }
 }
